--- a/age-calculator-app-main/style.css
+++ b/age-calculator-app-main/style.css
@@ -17,12 +17,19 @@ body{
     width: 60%;
     padding: 2em;
     border-radius: 15px 15px 50px 15px;
+    text-align: center;
+}
+
+.part{
+    display: flex;
+    flex-direction: column;
 }
 
 .line{
     background-color: hsl(0, 0%, 86%);
     width:80%;
     height: 1px;
+    margin: 1em 0;
 }
 
 .circle{
@@ -34,4 +41,36 @@ body{
     justify-content: center;
     align-items: center;
     padding: .7em;
+    cursor: pointer;
+}
+
+.circle:hover{
+    background-color: black;
+}
+
+.inputs{
+    max-width:80%;
+    display: flex;
+    flex-direction: row;
+}
+
+.dmy{
+    color: hsl(0, 1%, 44%);
+    text-transform: uppercase;
+}
+
+input{
+    border-radius: 5px;
+    border: solid 1px rgb(165, 162, 162);
+    width: 70%;
+}
+
+.calculation{
+    font-size: 3rem;
+    font-style: italic;
+    font-weight: 800;
+}
+
+.number{
+    color:hsl(259, 100%, 65%);
 }
