--- a/age-calculator-app-main/style.css
+++ b/age-calculator-app-main/style.css
@@ -14,20 +14,31 @@ body{
 
 .main-container{
     background-color: hsl(0, 0%, 100%);
-    width: 60%;
+    width: 50%;
     padding: 2em;
-    border-radius: 15px 15px 50px 15px;
-    text-align: center;
+    border-radius: 15px 15px 150px 15px;
+    border: 1px dotted red;
+    
 }
 
 .part{
     display: flex;
     flex-direction: column;
+    border: 1px dotted red;
+}
+
+.divider{
+    border: 1px dotted red;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    align-items: center;
 }
 
 .line{
     background-color: hsl(0, 0%, 86%);
-    width:80%;
+    width:90%;
     height: 1px;
     margin: 1em 0;
 }
@@ -52,6 +63,7 @@ body{
     max-width:80%;
     display: flex;
     flex-direction: row;
+    border: 1px dotted red;
 }
 
 .dmy{
@@ -61,14 +73,26 @@ body{
 
 input{
     border-radius: 5px;
-    border: solid 1px rgb(165, 162, 162);
+    color:hsl(0, 1%, 44%);
+    text-transform: uppercase;
+    font-weight: 600;
+    border: solid 1px hsl(0, 0%, 86%);
     width: 70%;
+    font-size:1.5rem;
+    padding: .5em;
+    cursor: pointer;
+}
+
+input:hover{
+    border: solid 1px rgb(165, 162, 162);
 }
 
 .calculation{
-    font-size: 3rem;
+    font-size: 5rem;
     font-style: italic;
     font-weight: 800;
+    line-height: 1.2em;
+    border: 1px dotted red;
 }
 
 .number{
