--- a/age-calculator-app-main/style.css
+++ b/age-calculator-app-main/style.css
@@ -7,28 +7,26 @@
 body{
     background-color: hsl(0, 0%, 94%);
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     font-family: 'Poppins', sans-serif;
+    height: 100vh;
 }
 
 .main-container{
+   
     background-color: hsl(0, 0%, 100%);
     width: 50%;
     padding: 2em;
     border-radius: 15px 15px 150px 15px;
-    border: 1px dotted red;
-    
 }
 
 .part{
     display: flex;
     flex-direction: column;
-    border: 1px dotted red;
 }
 
 .divider{
-    border: 1px dotted red;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -60,15 +58,16 @@ body{
 }
 
 .inputs{
-    max-width:80%;
+    max-width:70%;
     display: flex;
     flex-direction: row;
-    border: 1px dotted red;
 }
 
 .dmy{
     color: hsl(0, 1%, 44%);
     text-transform: uppercase;
+    font-size: .8rem;
+    letter-spacing: .2em;
 }
 
 input{
@@ -77,7 +76,7 @@ input{
     text-transform: uppercase;
     font-weight: 600;
     border: solid 1px hsl(0, 0%, 86%);
-    width: 70%;
+    width: 80%;
     font-size:1.5rem;
     padding: .5em;
     cursor: pointer;
@@ -92,7 +91,6 @@ input:hover{
     font-style: italic;
     font-weight: 800;
     line-height: 1.2em;
-    border: 1px dotted red;
 }
 
 .number{
