--- a/age-calculator-app-main/style.css
+++ b/age-calculator-app-main/style.css
@@ -96,3 +96,47 @@ input:hover{
 .number{
     color:hsl(259, 100%, 65%);
 }
+
+@media screen and (max-width:980px){
+
+    .main-container{
+        width: 90%;
+        min-height: 55%;
+        border-radius: 15px 15px 90px 15px;
+    }
+
+    .inputs{
+        max-width: 100%;
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
+
+    input {
+       width: 90%;
+    }
+
+    .calculation{
+        font-size: 3.5rem;
+    }
+
+    .divider{
+    
+      margin-top: 2em;
+      position: relative;
+      justify-content: center;
+    }
+
+    .line{
+        width: 100%;
+    }
+
+    .circle{
+        position: absolute;
+        padding: 1em;
+    }
+    
+
+    .calculation{
+        margin-top: .5em;
+    }
+}
